--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,131 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.modules.home.Home">
+    android:background="@color/backgroundColor"
+    tools:context=".ui.modules.home.Home"
+    tools:openDrawer="end">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_alignStart="@id/toolbarLayout"
+                    android:layout_alignTop="@+id/toolbarLayout"
+                    android:layout_alignEnd="@id/toolbarLayout"
+                    android:layout_alignBottom="@id/toolbarLayout"
+                    android:importantForAccessibility="no"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bg_top" />
+
+                <LinearLayout
+                    android:id="@+id/toolbarLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.appbar.MaterialToolbar
+                        android:id="@+id/materialToolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_marginTop="24dp"
+                        app:menu="@menu/top_menu"
+                        app:navigationIcon="@drawable/ic_menu"
+                        app:navigationIconTint="@color/white" />
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tabLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@null"
+                        app:tabIndicatorColor="#ACC44C"
+                        app:tabIndicatorFullWidth="true"
+                        app:tabIndicatorHeight="4dp"
+                        app:tabSelectedTextColor="@color/white"
+                        app:tabTextAppearance="@style/TabTextStyle"
+                        app:tabTextColor="#ccc">
+
+                        <com.google.android.material.tabs.TabItem
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Featured" />
+
+                        <com.google.android.material.tabs.TabItem
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Pro" />
+
+
+                    </com.google.android.material.tabs.TabLayout>
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <!--        <include-->
+        <!--            android:id="@+id/contentLayout"-->
+        <!--            layout="@layout/content_home"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_marginTop="?attr/actionBarSize" />-->
+
+        <!--        <com.google.android.material.bottomappbar.BottomAppBar-->
+        <!--            android:id="@+id/bottomAppBar"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="?attr/actionBarSize"-->
+        <!--            android:layout_gravity="bottom"-->
+        <!--            app:hideOnScroll="true">-->
+
+        <!--            <com.google.android.material.bottomnavigation.BottomNavigationView-->
+        <!--                android:id="@+id/bottomNavigation"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                style="@style/Widget.MaterialComponents.BottomNavigationView"-->
+        <!--                android:layout_marginEnd="16dp"-->
+        <!--                app:itemIconSize="22dp"-->
+        <!--                app:itemIconTint="@color/bottom_nav_icon"-->
+        <!--                app:itemTextAppearanceActive="@style/UbuntuMediumTextStyle"-->
+        <!--                app:itemTextColor="@color/bottom_nav_icon"-->
+        <!--                app:menu="@menu/bottom_nav_menu" />-->
+
+        <!--        </com.google.android.material.bottomappbar.BottomAppBar>-->
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        android:hardwareAccelerated="true"
+        app:drawerLayoutCornerSize="16dp">
+
+
+    </com.google.android.material.navigation.NavigationView>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
