--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,6 @@
         <item name="android:textColor">@color/textColor</item>
         <item name="android:textColorHint">@color/textColorSecondary</item>
         <item name="backgroundColor">@color/backgroundColor</item>
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="android:windowLightStatusBar">false</item>
     </style>
 
 
@@ -17,6 +15,9 @@
     </style>
 
 
-
+    <style name="BottomNavTextStyle" parent="TextAppearance.Material3.BodySmall">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
