--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,12 +83,12 @@
         </com.google.android.material.appbar.AppBarLayout>
 
 
-        <!--        <include-->
-        <!--            android:id="@+id/contentLayout"-->
-        <!--            layout="@layout/content_home"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:layout_marginTop="?attr/actionBarSize" />-->
+        <include
+            android:id="@+id/contentLayout"
+            layout="@layout/content_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="60dp" />
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
