--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -88,8 +88,8 @@
                     android:layout_marginTop="12sp"
                     android:layout_marginEnd="22dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/tab_layout_background"
-                    app:tabBackground="@drawable/tab_background"
+                    android:background="@drawable/auth_tab_layout_background"
+                    app:tabBackground="@drawable/auth_tab_background"
                     app:tabIndicator="@null"
                     app:tabRippleColor="@null"
                     app:tabSelectedTextColor="#0C3539"
