--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorSecondary">#AB98E3</color>
     <color name="colorPrimaryDark">#8062D6</color>
     <color name="colorAccent">#8062D6</color>
-    <color name="textColor">#212121</color>
+    <color name="textColor">#0C3539</color>
     <color name="textColorSecondary">#555</color>
     <color name="backgroundColor">#FFFFFF</color>
     <color name="backgroundColorSecondary">#F5F5F5</color>
