--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,15 +47,23 @@
                         android:orientation="vertical">
 
 
-                        <ImageView
-                            android:id="@+id/team_logo"
+                        <com.google.android.material.card.MaterialCardView
                             android:layout_width="110dp"
                             android:layout_height="110dp"
                             android:layout_marginStart="12dp"
                             android:layout_marginTop="20dp"
-                            android:importantForAccessibility="no"
-                            android:scaleType="centerCrop"
-                            tools:src="@drawable/img_placeholder_landscape" />
+                            app:cardCornerRadius="5dp"
+                            app:strokeWidth="0dp">
+
+                            <ImageView
+                                android:id="@+id/team_logo"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
+                                android:importantForAccessibility="no"
+                                android:scaleType="centerCrop"
+                                tools:src="@drawable/img_placeholder_landscape" />
+
+                        </com.google.android.material.card.MaterialCardView>
 
 
                         <TextView
@@ -112,14 +120,15 @@
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="7dp"
                     android:layout_marginTop="10dp"
                     android:background="@null"
                     app:tabBackground="@drawable/home_tab_background"
                     app:tabGravity="start"
                     app:tabIndicator="@null"
                     app:tabMode="scrollable"
-                    app:tabPaddingEnd="16dp"
-                    app:tabPaddingStart="16dp"
+                    app:tabPaddingEnd="24dp"
+                    app:tabPaddingStart="24dp"
                     app:tabSelectedTextColor="@color/white"
                     app:tabTextAppearance="@style/TabTextStyle"
                     app:tabTextColor="@color/white">
@@ -152,6 +161,26 @@
 
 
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="12dp"
+            android:drawablePadding="5dp"
+            android:text="Swipe"
+            android:textColor="#CD5858"
+            app:drawableEndCompat="@drawable/ic_swipe_right"
+            app:drawableStartCompat="@drawable/ic_swipe_left" />
+
+
+        <include
+            android:id="@+id/summaryLayout"
+            layout="@layout/layout_summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        />
 
 
     </LinearLayout>
