--- a/app/src/main/res/layout/item_single_match.xml
+++ b/app/src/main/res/layout/item_single_match.xml
@@ -128,24 +128,20 @@
             android:orientation="horizontal">
 
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/team_one_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="6dp"
+                android:layout_marginEnd="13dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="Divine Fighter"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/team_one_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="6dp"
-                    android:layout_marginEnd="13dp"
-                    android:text="Divine Fighter"
-                    android:textColor="@color/textColor"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-
-            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -158,23 +154,19 @@
                 android:textSize="14sp"
                 android:visibility="invisible" />
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/team_two_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="6dp"
-                    android:layout_marginStart="13dp"
-                    android:text="Divine Fighter"
-                    android:textColor="@color/textColor"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/team_two_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="6dp"
+                android:layout_marginStart="13dp"
+                android:layout_weight="1"
+                android:text="Divine Fighter"
+                android:textColor="@color/textColor"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
