--- a/app/src/main/res/layout/item_single_match.xml
+++ b/app/src/main/res/layout/item_single_match.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -137,7 +138,7 @@
                 android:layout_marginEnd="13dp"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:text="Divine Fighter"
+                tools:text="Divine Fighter"
                 android:textColor="@color/textColor"
                 android:textSize="14sp"
                 android:textStyle="bold" />
