--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fillViewport="true"
     tools:context="com.rejowan.lmsteamprofile.ui.modules.home.fragments.HomeFragment">
 
     <LinearLayout
@@ -179,6 +180,7 @@
             android:id="@+id/viewPager2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="true"
             android:layout_marginTop="10dp" />
 
     </LinearLayout>
