--- a/app/src/main/res/layout/item_single_video.xml
+++ b/app/src/main/res/layout/item_single_video.xml
@@ -42,7 +42,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
-                    app:cardBackgroundColor="#008977">
+                    app:cardBackgroundColor="#008977"
+                    app:strokeWidth="0dp">
 
                     <TextView
                         android:layout_width="wrap_content"
