--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:fillViewport="true"
     tools:context="com.rejowan.lmsteamprofile.ui.modules.home.fragments.HomeFragment">
 
     <LinearLayout
@@ -130,6 +129,7 @@
                     app:tabMode="scrollable"
                     app:tabPaddingEnd="24dp"
                     app:tabPaddingStart="24dp"
+                    app:tabRippleColor="@null"
                     app:tabSelectedTextColor="@color/white"
                     app:tabTextAppearance="@style/TabTextStyle"
                     app:tabTextColor="@color/white">
@@ -180,7 +180,6 @@
             android:id="@+id/viewPager2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:nestedScrollingEnabled="true"
             android:layout_marginTop="10dp" />
 
     </LinearLayout>
