--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -481,6 +481,7 @@
 
 
                                 <LinearLayout
+                                    android:id="@+id/seeFullBatsman"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
@@ -566,6 +567,7 @@
 
 
                                 <LinearLayout
+                                    android:id="@+id/seeFullBowler"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
